--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,13 @@
     <groupId>org.example</groupId>
     <artifactId>Groupseven</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <maven.compiler.source>6</maven.compiler.source>
+        <maven.compiler.target>1.6</maven.compiler.target>
+    </properties>
+
+
+
 
 
 </project>
