--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,4 @@ services:
   - docker
 
 after_success:
-  - docker network create --driver bridge GP7
-  - docker pull mongo
-  - docker run -d --name mongo-dbserver --network GP7 mongo
-  - docker build -t GP7 .
-  - docker run --network GP7 GP7
+  - docker-compose up --abort-on-container-exit
