--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.example</groupId>
     <artifactId>Groupseven</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0-v0.2-alpha3</version>
 
     <dependencies>
         <dependency>
